# estates-web

./: .flaskenv  LICENSE  Makefile  README.md  app.py  config.py  environment.yaml  pyproject.toml  serverless.yml
app/: __init__.py  models.py  routes.py
app/static/: styles.css
app/templates/: base.html  detail.html  index.html
