[tool.poetry]
name = "estates-web"
version = "0.1.0"
description = "A serverless webapp for the estates repository."
authors = ["Martin Matousek <mmatousek3@gatech.edu>"]
license = "Martin Matousek <martin.matousek@outlook.com>"

[tool.poetry.dependencies]
python = "3.8"
Flask = "1.1.4"
boto3 = "^1.17.105"
psycopg2-binary = "^2.9.1"
Flask-SQLAlchemy = "^2.5.1"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
python-dotenv = "^0.18.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
